Increased z-index for error overlay so it no is no longer obscured by expanded windows on load.

--- a/public/uts/coupledtanksnew/coupledtanksnew.css
+++ b/public/uts/coupledtanksnew/coupledtanksnew.css
@@ -914,7 +914,7 @@
     -moz-box-shadow: 0 0 10px #aaa;
     -webkit-box-shadow: 0 0 10px #aaa;
     box-shadow: 0 0 10px #aaa;
-    z-index: 100;
+    z-index: 110;
 }
 
 #global-error .global-error-log {
